--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.liyang.jpa</groupId>
 	<artifactId>mysql-smart-query</artifactId>
-	<version>1.0.1-RELEASE</version>
+	<version>1.0.1</version>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
